# auth_service_rust

./: .woodpecker.yml  Cargo.toml  Dockerfile  ec-private.pem  ec-public.pem
devNotes/: KeyGeneration.md  mongo-dev.yaml
src/: auth.rs  endpoints.rs  main.rs  models.rs
