[package]
name = "auth_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.0", features = ["full"] }
axum = { version = "0.5.4" }
serde = { version = "1.0.136", features = ["derive"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
thiserror = "1.0.30"
anyhow = "1.0.57"
jsonwebtoken = "8"
chrono = "0.4.19"
