[package]
name = "auth_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Usual system deps
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.18", features = ["full"] }
axum = { version = "0.5" }
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "1.13", features = ["chrono"] }
thiserror = "1"
anyhow = "1"
config = "0.13"

# Project specific
rand = "0.8"
jsonwebtoken = "8"
chrono = { version = "0.4", features = ["serde"] }
mongodb = { version = "2.2", features = [
    "zstd",
    "bson-uuid-0_8",
    "bson-chrono-0_4",
    "bson-serde_with",
] }
validator = { version = "0.14" }
uuid = { version = "0.8", features = ["serde", "v4"] }

# Future functionality
# lettre = { version = "0.10.0-rc.6", features = ["tracing"] }
